--- a/myindex.j2
+++ b/myindex.j2
@@ -1,1 +1,9 @@
 <h1> this is my index file</h1>
+<h1> this ansible nord ip is : {{ansible_all_ipv4_addresses}}</h1>
+<h1> this ansible nord os is : {{ansible_os_family}}</h1>
+<h1> this ansible nord java package is : {{myjavaonubuntu}}</h1>
+
+
+
+
+
